2012-02-18 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdInstallMain): Fix call to
	CygbuildCmdDeleteListExists().

2012-02-11 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl: (Help::OPTIONAL EXTERNAL FILES): Document
	delete.lst file. Move --help option to the end. Document --xz
	option.

	* bin/cygbuild.sh (CygbuildCmdDeleteListExists): New.
	(CygbuildCmdInstallList): Correct variable name to "retval".
	(CygbuildCmdDeleteList): New.
	(CygbuildDefineGlobalMain): New variable set SCRIPT_DELETE_LST_CYGFILE.

2012-02-04 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/template/clean.sh.ex: New.

	* bin/cygbuild.sh (CygbuildDefineGlobalMain): Add SCRIPT_CLEAN_CYGFILE,
	SCRIPT_DISTCLEAN_CYGFILE.
	(CygbuildCmdCleanMain): Add support for custom clean.sh, distclean.sh

2012-02-01 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildTarOptionCompress): Add XZ support. Correct
	LZMA support.
	(CygbuildCommandMain): Add option --xz.
	(CygbuildCompress): Add XZ support.
	(CygbuildTarOptionInUse): New.
	(CygbuildStrRemoveExt): Add XZ support.
	(CygbuildCygbuildDefineGlobalSrcOrigGuess): Add XZ support.
	(CygbuildInstallExtraManualCompress): Add XZ support.
	(CygbuildFilePackageGuessMain): In call to CygbuildFilePackageGuessArchive(),
	support LZMA and XZ.
	(CygbuildDefineGlobalMain): Use $OPTION_COMPRESS and not hard coded bz2.
	(CygbuildCommandMain): Add missing --verbose option from getopt call.

	* bin/lib/libcheck.sh (CygbuildCmdInstallCheckLibrariesPerlListLocal): New.
	(CygbuildCmdInstallCheckLibrariesPerl): Filter out local libs.

	* bin/template/cygwin-announce.mail.ex: Replace @ with (at).

2012-01-29 Sun  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl (ReadmeFix): Check empty file. Check
	identical content by examining first line.

	* bin/lib/libcheck.sh (CygbuildCmdInstallCheckShellFiles): Improve
	legibility.
	(CygbuildPerlLibraryList): Improve package matching regexp to see